raphael: Add FPS info overlay

--- a/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
@@ -31,4 +31,11 @@
 
     <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
     <integer name="config_screenRecorderMaxFramerate">60</integer>
+
+    <!-- Burn-in protection -->
+    <bool name="config_statusBarBurnInProtection">true</bool>
+    <integer name="config_shift_interval">40</integer>
+
+    <!-- FPSInfoService Fps file path -->
+    <string name="config_fpsInfoSysNode" translatable="false">/sys/class/drm/card0/sde-crtc-0/measured_fps</string>
 </resources>
